[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/splash_screen/animated_screen.gd" type="Script" id=1]
[ext_resource path="res://resources/animated logo/pianobull_animated_logo_webm.webm" type="VideoStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="animated_screen" type="Node2D"]
script = ExtResource( 1 )
next_scene = "res://scenes/title/title.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -32.0
margin_right = 24.0
margin_bottom = 8.0
rect_scale = Vector2( 12.72, 12.72 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 107.708
margin_top = 3.70812
margin_right = 1195.71
margin_bottom = 1091.71
rect_scale = Vector2( 0.24, 0.24 )
stream = ExtResource( 2 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -44.717
margin_top = -73.4162
margin_right = 546.283
margin_bottom = 517.584
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fader_controller" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 1 )

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
